// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingName render with fullName 1`] = `
<div>
  <div
    style="display: contents;"
  >
    <span>
      Root password
    </span>
  </div>
</div>
`;

exports[`SettingName render without fullName 1`] = `
<div>
  <div
    style="display: contents;"
  >
    <span>
      always_show_configuration_status
    </span>
  </div>
</div>
`;
